--- a/TORRES_LABEXER2/style.css
+++ b/TORRES_LABEXER2/style.css
@@ -20,7 +20,7 @@ body{
 }
 
 #login_form, #sign_up_form{
-    width: 50%;
+    width: 300px;
     border-radius: 20px;
     background-color: rgb(238, 238, 238);
 }
